--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
 
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
-    html { scroll-behavior: smooth; background: #000; width: 100%; }
+    html { scroll-behavior: smooth; background: #000; width: 100%; overflow-x: hidden; }
 
     body {
       font-family: "AvenirBlackArabic", system-ui, sans-serif;
@@ -49,6 +49,7 @@
       overflow-x: hidden;
       max-width: 100vw;
       width: 100%;
+      position: relative;
       line-height: 1.7;
       -webkit-font-smoothing: antialiased;
     }
@@ -66,7 +67,8 @@
     .delay-2 { animation-delay: 0.2s; }
 
     /* Layout */
-    .wrap { max-width: var(--max); margin: 0 auto; padding: 0 16px; }
+    .wrap { max-width: var(--max); margin: 0 auto; padding: 0 16px; width: 100%; }
+    main { width: 100%; overflow-x: hidden; }
     section { padding: 40px 0; }
 
     /* Typography */
@@ -552,6 +554,11 @@
       color: var(--muted);
       text-decoration: none;
     }
+    .footer-links a.store {
+      color: #061006;
+      background: rgba(57,255,20,.9);
+      border-color: rgba(57,255,20,.75);
+    }
 
     /* Mobile Nav */
     .mobile-nav {
@@ -561,15 +568,17 @@
       bottom: 10px;
       z-index: 200;
       display: none;
+      overflow: hidden;
     }
     .mobile-nav-bar {
-      background: rgba(5,6,7,.92);
+      background: rgba(5,6,7,.68);
       backdrop-filter: blur(20px);
       border: 1px solid rgba(255,255,255,.1);
       border-radius: 18px;
       padding: 8px;
       display: flex;
       gap: 6px;
+      width: 100%;
     }
     .mobile-nav-bar a {
       flex: 1;
@@ -585,6 +594,11 @@
     .mobile-nav-bar a.active {
       border-color: rgba(57,255,20,.35);
       color: var(--text);
+    }
+    .mobile-nav-bar a.store {
+      color: #061006;
+      background: rgba(57,255,20,.9);
+      border-color: rgba(57,255,20,.75);
     }
 
     /* Responsive */
@@ -615,10 +629,10 @@
         <div class="brand"><img src="assets/brands/infinitex-logo.png" alt="INFINITEX" /></div>
         <div class="navlinks">
           <a href="index.html">الرئيسية</a>
-          <a href="track.html">تتبع الطلب</a>
-          <a href="returns.html">الاسترجاع</a>
+          <a href="track.html">التتبع</a>
+          <a href="returns.html">الإسترجاع</a>
           <a href="products.html" class="active">المنتجات</a>
-          <a href="contact.html">تواصل معنا</a>
+          <a href="contact.html">مساعدة</a>
         </div>
       </nav>
     </div>
@@ -955,7 +969,7 @@
       <div class="footer-brand">INFINITEX</div>
       <p class="footer-copy">© <span id="year"></span> INFINITEX. جميع الحقوق محفوظة.</p>
       <div class="footer-links">
-        <a href="https://infinitex.sa/" target="_blank">المتجر</a>
+        <a href="https://infinitex.sa/" target="_blank" class="store">أطلب</a>
         <a href="https://infinitex.sa/blogs/gold-warranty-policy" target="_blank">الضمان الذهبي</a>
       </div>
     </div>
@@ -964,11 +978,11 @@
   <div class="mobile-nav">
     <div class="mobile-nav-bar">
       <a href="index.html">الرئيسية</a>
-      <a href="track.html">تتبع</a>
-      <a href="returns.html">استرجاع</a>
+      <a href="track.html">التتبع</a>
+      <a href="returns.html">الإسترجاع</a>
       <a href="products.html" class="active">المنتجات</a>
-      <a href="contact.html">تواصل</a>
-      <a href="https://infinitex.sa/" target="_blank">المتجر</a>
+      <a href="contact.html">مساعدة</a>
+      <a href="https://infinitex.sa/" target="_blank" class="store">أطلب</a>
     </div>
   </div>
 
